--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Jamie Polintan ">
-<meta name="description" content="Hello! I’m Vie (real name Jam), a member of the Maple Bacon CTF team and university student based in Canada. I currently focus on web-based exploits, networking hacks, and aerospace security. Outside of cyber security competitions I utilize my skills in computer science, mathematics, and art to craft informative projects that bring tech to a wider audience, or connect technology to other disciplines with which I feel passionate about.
-Some of my other interests include astronomy and aerospace, algorithm analysis and design, and statistical analysis applied to environmental and biological phenomena." />
+<meta name="description" content="Hello! I’m Astro (real name Amine Elsassi), a member of the IrNoobs CTF team and university student based in Tunisia. I currently focus on web-based exploits, hardware hacks, and ICS security. Outside of cyber security competitions I utilize my skills in computer science and electronics to craft informative projects that bring tech to a wider audience, or connect technology to other disciplines with which I feel passionate about.
+Some of my other interests include mythologies, astronomy, and nano technologies 
+and finally shout-out to second Fam : SECURINETS-ISI, I love You'all so much" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="#0c0c0d" />
