--- a/series/index.html
+++ b/series/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="Jamie Polintan ">
+<meta name="author" content="ASTRO">
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
@@ -42,17 +42,17 @@
 
 
 <meta itemprop="name" content="Series">
-<meta itemprop="description" content="JamVie: blog of cybersecurity. Home icon made on Canva">
+<meta itemprop="description" content="astro: blog of cybersecurity. Home icon made on Canva">
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://stuckforflow.github.io/img/profile.jpg"/>
 
 <meta name="twitter:title" content="Series"/>
-<meta name="twitter:description" content="JamVie: blog of cybersecurity. Home icon made on Canva"/>
+<meta name="twitter:description" content="astro: blog of cybersecurity. Home icon made on Canva"/>
 
 
 
     <meta property="og:title" content="Series" />
-<meta property="og:description" content="JamVie: blog of cybersecurity. Home icon made on Canva" />
+<meta property="og:description" content="astro: blog of cybersecurity. Home icon made on Canva" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://stuckforflow.github.io/series/" />
 <meta property="og:image" content="https://stuckforflow.github.io/img/profile.jpg"/>
