--- a/about/index.html
+++ b/about/index.html
@@ -167,7 +167,7 @@ if (!doNotTrack) {
 <p>Some of my other interests include mythologies, astronomy, and nano technologies </p>
 
 
-<p>In the very end i want to give a shout-out to second Family : SECURINETS-ISI, I love You'all so much.</p>
+<p>In the very end i want to give a shout-out to my second Family : SECURINETS-ISI, I love You'all so much.</p>
 <h2 id="acknowledgements">Acknowledgements</h2>
 <p>Interactive home icon made on Canva.</p>
 <p>Website theme by <a href="https://github.com/rhazdon.">Djordje Atlialp</a></p>
